# nRf5340TrafficLights2.0

./: README.md
tests/: CMakeLists.txt  TimeParserTest.cpp  TrafficParserTest.cpp
vko5/: CMakeLists.txt  prj.conf
vko5/src/: TimeParser.cpp  TimeParser.h  TrafficParser.cpp  TrafficParser.h  main.c
